--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
  <i>For the past 10 years, I’ve been working on designing experiences and journeys that touch people's inner Self.</i><br/>
 <br/>
 
-<h2 style="padding: 0; margin: 0; color: #3e9169"><a href="http://dan.kiev.ua/kievpohod">походы по киеву</a> &nbsp; <a href="http://dan.kiev.ua/blog">статьи</a> &nbsp; <a href="http://dan.kiev.ua/whereismygranny">#whereismygranny</a></h2>
+<h2 style="padding: 0; margin: 0; color: #3e9169"><a href="http://to.dan.kiev.ua/kievpohod">походы по киеву</a> &nbsp; <a href="http://to.dan.kiev.ua/articles">статьи</a> &nbsp; <a href="http://to.dan.kiev.ua/whereismygranny">#whereismygranny</a></h2>
 <br/>
 > <a target="_blank" href="https://www.instagram.com/harmony.consent/">instagram</a>
 > <a target="_blank" href="https://www.youtube.com/user/DanVoronov/videos">youtube</a>
 > <a target="_blank" href="https://medium.com/@dan.voronov">medium</a>
 > <a target="_blank" href="https://t.me/dankievua">telegram chanel</a><br/>
 <br/>
-&#8964; <a href="http://dan.kiev.ua/dan-files/cv_danvoronov_2018.pdf">Dan Voronov CV (eng, pdf)</a>
+&#8964; <a href="http://to,dan.kiev.ua/dan-files/cv_danvoronov_2018.pdf">Dan Voronov CV (eng, pdf)</a>
 <br/>
 <span style="font-size: 80%"> #contemporary #narrative #artist #dramaturg #film #director #butoh #dancer #performer #electronicmusic #vegan </span><br/>
 <script>
