--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
    <style>
 	   a {color: black};
 	</style>
- <body style="padding: 30px; margin: 0; border: 10px solid #e5950c; max-width: 600px; background-color: white;"><h1 style="padding: 0; margin: 0; color: #1e7219">Дан Вóронов</h1>
+ <body style="padding: 0; margin: 0;">
+<div style="position: absolute; margin: auto; height: 250px; width: 600px;  background-color: white; border: 10px solid #e5950c; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
+	<h1 style="padding: 0; margin: 0; color: #1e7219">Дан Вóронов</h1>
  <br/>
  <i>For the past 10 years, I’ve been working on designing experiences and journeys that touch people's inner Self.</i><br/>
 <br/>
@@ -24,6 +26,7 @@
 &#8964; <a href="http://to.dan.kiev.ua/dan-files/cv_danvoronov_2018.pdf">Dan Voronov CV (eng, pdf)</a>
 <br/>
 <span style="font-size: 80%"> #contemporary #narrative #artist #dramaturg #film #director #butoh #dancer #performer #electronicmusic #vegan </span><br/>
+</div>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
