--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <i>For the past 10 years, I’ve been working on designing experiences and journeys that touch people's inner Self.</i><br/>
 <br/>
 
-<h2 style="padding: 0; margin: 0; color: #3e9169"><a href="http://to.dan.kiev.ua/kievpohod">походы по киеву</a> &nbsp; <a href="http://blog.dan.kiev.ua/">статьи</a> &nbsp; <a href="http://to.dan.kiev.ua/whereismygranny">#whereismygranny</a></h2>
+<h2 style="padding: 0; margin: 0; color: #3e9169"><a href="http://to.dan.kiev.ua/kievpohod">походы по киеву</a> &nbsp; <a href="http://dan.kiev.ua/blog/">статьи</a> &nbsp; <a href="http://to.dan.kiev.ua/whereismygranny">#whereismygranny</a></h2>
 <br/>
 > <a target="_blank" href="https://www.instagram.com/harmony.consent/">instagram</a>
 > <a target="_blank" href="https://www.youtube.com/user/DanVoronov/videos">youtube</a>
