dan-files add some

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 > <a target="_blank" href="https://medium.com/@dan.voronov">medium</a>
 > <a target="_blank" href="https://t.me/dankievua">telegram chanel</a><br/>
 <br/>
-&#8964; <a href="http://to.dan.kiev.ua/dan-files/cv_danvoronov_2018.pdf">Dan Voronov CV (eng, pdf)</a>
+&#8964; <a href="http://dan.kiev.ua/dan-files/cv/cv_danvoronov_2018.pdf">Dan Voronov CV (eng, pdf)</a>
 <br/>
 <span style="font-size: 80%"> #contemporary #narrative #artist #dramaturg #film #director #butoh #dancer #performer #electronicmusic #vegan </span><br/>
 </div>
