--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <i>For the past 10 years, I’ve been working on designing experiences and journeys that touch people's inner Self.</i><br/>
 <br/>
 
-<h2 style="padding: 0; margin: 0; color: #3e9169"><a href="kievpohod/">походы по киеву</a> &nbsp; <a href="blog/">статьи</a> &nbsp; <a href="whereismygranny/">#whereismygranny</a></h2>
+<h2 style="padding: 0; margin: 0; color: #3e9169"><a href="kievpohod/">походы по киеву</a> &nbsp; <a href="blog/">статьи</a> &nbsp; <a href="https://medium.com/@dan.voronov/%D0%B4%D0%B0%D0%BD-%D0%B2%D0%BE%D1%80%D0%BE%D0%BD%D0%BE%D0%B2-%D0%B0%D1%80%D1%82-2008-18-268ff6376777">творчество</a></h2>
 <br/>
 > <a target="_blank" href="https://www.instagram.com/harmony.consent/">instagram</a>
 > <a target="_blank" href="https://www.youtube.com/user/DanVoronov/videos">youtube</a>
