--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="nojs html" lang="ru-RU" style="background-color: #1caf69;">
  <head>
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
-    <title>Дан Воронов, Киев</title>
+    <title>Dan Voronov | Дан Воронов</title>
      <meta name="description" content="Личный сайт. Дан Воронов. Киев">
 	 <meta name="author" content="Dan Voronov"> 
    </head>
@@ -11,21 +11,22 @@
 	</style>
  <body style="padding: 0; margin: 0;">
 <div style="position: absolute; margin: auto; height: 250px; width: 600px;  background-color: white; border: 10px solid #e5950c; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
-	<h1 style="padding: 0; margin: 0; color: #1e7219">Дан Вóронов</h1>
+	<h1 style="padding: 0; margin: 0; color: #1e7219">Dan Voronov / Дан Вóронов</h1>
  <br/>
  <i>For the past 10 years, I’ve been working on designing experiences and journeys that touch people's inner Self.</i><br/>
 <br/>
 
-<h2 style="padding: 0; margin: 0; color: #3e9169"><a href="kievpohod/">походы по киеву</a> &nbsp; <a href="blog/">статьи</a> &nbsp; <a href="https://medium.com/@dan.voronov/%D0%B4%D0%B0%D0%BD-%D0%B2%D0%BE%D1%80%D0%BE%D0%BD%D0%BE%D0%B2-%D0%B0%D1%80%D1%82-2008-18-268ff6376777">творчество</a></h2>
+<h2 style="padding: 0; margin: 0; color: #3e9169"><a href="https://medium.com/@dan.voronov/%D0%B4%D0%B0%D0%BD-%D0%B2%D0%BE%D1%80%D0%BE%D0%BD%D0%BE%D0%B2-%D0%B0%D1%80%D1%82-2008-18-268ff6376777">Art projects</a> &nbsp; <a href="kievpohod/">Kyiv urban hikes</a> &nbsp; <a href="blog/">Articles</a> &nbsp; <a href="now/">Now</a></h2>
 <br/>
+> <a target="_blank" href="https://medium.com/@dan.voronov">medium</a>
 > <a target="_blank" href="https://www.instagram.com/harmony.consent/">instagram</a>
 > <a target="_blank" href="https://www.youtube.com/user/DanVoronov/videos">youtube</a>
-> <a target="_blank" href="https://medium.com/@dan.voronov">medium</a>
-> <a target="_blank" href="https://t.me/dankievua">telegram chanel</a><br/>
+> <a target="_blank" href="https://t.me/dankievua">telegram public</a>
+ &nbsp;  &nbsp; > <a target="_blank" href="https://polyamory.in.ua">polyamory.in.ua</a><br/>
 <br/>
 &#8964; <a href="http://dan.kiev.ua/dan-files/cv/cv_danvoronov_2018.pdf">Dan Voronov CV (eng, pdf)</a>
 <br/>
-<span style="font-size: 80%"> #contemporary #narrative #artist #dramaturg #film #director #butoh #dancer #performer #electronicmusic #vegan </span><br/>
+<span style="font-size: 80%"> #contemporary #narrative #artist #dramaturg #director #butoh #dancer #performer </span><br/>
 </div>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
