--- a/now/index.html
+++ b/now/index.html
@@ -11,7 +11,7 @@
 	</style>
  <body style="padding: 0; margin: 0;">
 <div style="position: absolute; margin: auto; height: 250px; width: 600px;  background-color: white; border: 10px solid #e5950c; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
-  <a href="/">< назад</a><br/><br/>
+  <a href="../">< назад</a><br/><br/>
 <h1>Что я делаю сейчас? Какие проекты?</h1><br/>
 2019: Зимний перерыв, с весны - КИЕВнасквозь.
 </div>
