--- a/now/index.html
+++ b/now/index.html
@@ -2,7 +2,7 @@
 <html class="nojs html" lang="ru-RU" style="background-color: #1caf69;">
  <head>
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
-    <title>Dan Voronov now | Дан Воронов сейчас</title>
+    <title>What I’m doing now | Dan Voronov</title>
      <meta name="description" content="Личный сайт. Дан Воронов. Киев">
 	 <meta name="author" content="Dan Voronov"> 
    </head>
@@ -11,9 +11,11 @@
 	</style>
  <body style="padding: 0; margin: 0;">
 <div style="position: absolute; margin: auto; height: 250px; width: 600px;  background-color: white; border: 10px solid #e5950c; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
-  <a href="../">< назад</a><br/><br/>
-<h1>Что я делаю сейчас? Какие проекты?</h1><br/>
-2019: Зимний перерыв, с весны - КИЕВнасквозь.
+  <a href="../">< back</a><br/>
+<h2>What I’m doing now</h2><br/>
+<b>2019</b> – just trying to survive on this winter, </br>
+<b>2019 april</b> – we will start new season of КИЕВнасквозь hikes.<br/><br/><br/>
+<em>(This is <a href="https://nownownow.com/about">a now page</a>, and if you have your own site, <a href="https://nownownow.com/about">you should make one</a>, too.)</em>
 </div>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
