--- a/index.html
+++ b/index.html
@@ -16,15 +16,14 @@
  <i>For the past 10 years, I’ve been working on designing experiences and journeys that touch people's inner Self.</i><br/>
 <br/>
 
-<h2 style="padding: 0; margin: 0; color: #3e9169"><a href="https://medium.com/@dan.voronov/%D0%B4%D0%B0%D0%BD-%D0%B2%D0%BE%D1%80%D0%BE%D0%BD%D0%BE%D0%B2-%D0%B0%D1%80%D1%82-2008-18-268ff6376777">Art projects</a> &nbsp; <a href="kievpohod/">Kyiv urban hikes</a> &nbsp; <a href="blog/">Articles</a> &nbsp; <a href="now/">Now</a></h2>
+<h2 style="padding: 0; margin: 0; color: #3e9169"><a href="https://medium.com/@dan.voronov/%D0%B4%D0%B0%D0%BD-%D0%B2%D0%BE%D1%80%D0%BE%D0%BD%D0%BE%D0%B2-%D0%B0%D1%80%D1%82-2008-18-268ff6376777">ARTWORKS</a> &nbsp; <a href="projects/">PROJECTS</a>&nbsp;+&nbsp;<a href="now/">NOW</a> &nbsp; <a href="blog/">ARTICLES</a> </h2>
 <br/>
 > <a target="_blank" href="https://medium.com/@dan.voronov">medium</a>
 > <a target="_blank" href="https://www.instagram.com/harmony.consent/">instagram</a>
 > <a target="_blank" href="https://www.youtube.com/user/DanVoronov/videos">youtube</a>
 > <a target="_blank" href="https://t.me/dankievua">telegram public</a>
- &nbsp;  &nbsp; > <a target="_blank" href="https://polyamory.in.ua">polyamory.in.ua</a><br/>
-<br/>
-&#8964; <a href="http://dan.kiev.ua/dan-files/cv/cv_danvoronov_2018.pdf">Dan Voronov CV (eng, pdf)</a>
+<br/><br/>
+&#8964; <a href="http://dan.kiev.ua/dan-files/cv/cv_danvoronov_2018.pdf">C.V. (pdf)</a>
 <br/>
 <span style="font-size: 80%"> #contemporary #narrative #artist #dramaturg #director #butoh #dancer #performer </span><br/>
 </div>
