--- a/now/index.html
+++ b/now/index.html
@@ -13,8 +13,11 @@
 <div style="position: absolute; margin: auto; height: 250px; width: 600px;  background-color: white; border: 10px solid #e5950c; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
   <a href="../">< back</a><br/>
 <h2>What I’m doing now</h2><br/>
-<b>2019</b> – just trying to survive on this winter, </br>
-<b>2019 april</b> – we will start new season of КИЕВнасквозь hikes.<br/><br/><br/>
+<b>2018-19</b> – telegram public about the book "Коротко і по суті", </br>
+<b>2019</b> – restucturing and English translation of my site, </br>
+<b>2019</b> – deep reseach on the polyamory and butoh topics, </br>
+<b>2019</b> – start learning mobile game development, </br>
+<b>2019 april</b> – we will start new season of #КИЕВнасквозь hikes.<br/><br/><br/>
 <em>(This is <a href="https://nownownow.com/about">a now page</a>, and if you have your own site, <a href="https://nownownow.com/about">you should make one</a>, too.)</em>
 </div>
 <script>
