--- a/now/index.html
+++ b/now/index.html
@@ -14,9 +14,9 @@
   <a href="../">< back</a><br/>
 <h2>What I’m doing now</h2><br/>
 <b>2018-19</b> – telegram public about the book "Коротко і по суті", </br>
-<b>2019</b> – restucturing and English translation of my site, </br>
-<b>2019</b> – deep reseach on the polyamory and butoh topics, </br>
-<b>2019</b> – start learning mobile game development, </br>
+<b>2019</b> – restructuring and English translating of this site, </br>
+<b>2019</b> – deep research of the polyamory | <a target="_blank" href="https://polyamory.in.ua">polyamory.in.ua</a>, </br>
+<b>2019</b> – want to start learning mobile game development, </br>
 <b>2019 april</b> – we will start new season of #КИЕВнасквозь hikes.<br/><br/><br/>
 <em>(This is <a href="https://nownownow.com/about">a now page</a>, and if you have your own site, <a href="https://nownownow.com/about">you should make one</a>, too.)</em>
 </div>
