--- a/about/index.html
+++ b/about/index.html
@@ -14,13 +14,11 @@
   <a href="../">< back</a><br/>
     <h2>Me shortly</h2>
 
-Kyiv
+Kyiv's native, Berlin's weird, California's creative.
 
     <h2>Me not so shortly</h2>
 
-    KPI
-
-MAUP
+    Graduated KPI and MAUP.
 
 </div>
 <script>
