ARTWORKS and red

--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 </head>
 <body style="background: linear-gradient(224deg, #22c76e, #53a9b1); background-size: 400% 400%; -webkit-animation: Green 30s ease infinite; -moz-animation: Green 30s ease infinite; animation: Green 30s ease infinite;">
 	<div style="position: absolute; margin: auto; height: 250px; width: 600px;  background-color: white; border: 10px solid #22c76e; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
-	<h1 style="padding: 0; margin: 0; color: #088A68">Dan Voronov / Дан Вóронов</h1>
+	<h1 style="padding: 0; margin: 0; color: #DD4723">Dan Voronov / Дан Вóронов</h1>
  <br/>
 	 <i>For the past 10 years, I’ve been working on designing experiences and journeys that touch people's inner Self.</i><br/>
 	<br/>
 
-	<h2 style="padding: 0; margin: 0; color: #3e9169"><a href="about/">ME</a> &nbsp;<a href="artworks/">ARTWORKS</a>&nbsp;+&nbsp;<a href="projects/">PROJECTS</a> &nbsp;<a href="now/">NOW</a> &nbsp;<a href="blog/">ARTICLES</a> </h2>
-	<br/>
+	<h2 style="padding: 0; margin: 0; color: gray"><a href="about/">ME</a> &nbsp;<a href="artworks/">ARTWORKS</a>&nbsp;+&nbsp;<a href="projects/">PROJECTS</a> &nbsp;<a href="now/">NOW</a> &nbsp;<a href="blog/">ARTICLES</a> </h2>
+	<p style="font-size: 14pt">
 	<a href="mailto:dan@dan.kiev.ua">mail</a>	
 	> <a target="_blank" href="https://medium.com/@dan.voronov">medium</a>
 	> <a target="_blank" href="https://www.instagram.com/harmony.consent/">instagram</a>
 	> <a target="_blank" href="https://www.youtube.com/user/DanVoronov/videos">youtube</a>
 	> <a target="_blank" href="https://t.me/dankievua">telegram public</a>
-	<br/><br/>
+	<br/></p>
 	&#8964; <a href="http://dan.kiev.ua/dan-files/cv/cv_danvoronov_2018.pdf">C.V. (pdf)</a>
 	<br/>
 	<span style="font-size: 80%"> #contemporary #narrative #artist #dramaturg #director #butoh #dancer #performer </span><br/>
