--- a/projects/index.html
+++ b/projects/index.html
@@ -11,7 +11,7 @@
 	</style>
  <body style="padding: 0; margin: 30px;">
 <div style="margin: auto; min-height: 520px; width: 600px;  background-color: white; border: 10px solid #e5950c; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
-  <a href="../">< back</a><br/>
+  <a href="../" style="color: #DD4723">< back</a><br/>
     <h2>Projects, that I’ve done recently</h2>
 
     <span style="color: gray">2017–18</span> — Open educational project "Sex Education Week / SexEdUa" in Kyiv</a> <br/>
