--- a/now/index.html
+++ b/now/index.html
@@ -11,7 +11,7 @@
 	</style>
  <body style="padding: 0; margin: 0;">
 <div style="position: absolute; margin: auto; height: 250px; width: 600px;  background-color: white; border: 10px solid #e5950c; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
-  <a href="../">< back</a><br/>
+  <a href="../" style="color: #DD4723">< back</a><br/>
 <h2>What I’m doing now</h2><br/>
 <b>2018-19</b> – telegram public about the book "Коротко і по суті", </br>
 <b>2019</b> – restructuring and English translating of this site, </br>
