--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html class="nojs html" lang="ru-RU" style="background-color: #1caf69;">
  <head>
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
-    <title>How am I | Dan Voronov</title>
+    <title>About | Dan Voronov</title>
      <meta name="description" content="Личный сайт. Дан Воронов. Киев">
 	 <meta name="author" content="Dan Voronov"> 
    </head>
@@ -12,14 +12,27 @@
  <body style="padding: 0; margin: 30px;">
 <div style="margin: auto; min-height: 520px; width: 600px;  background-color: white; border: 10px solid #e5950c; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
   <a href="../" style="color: #DD4723">< back</a><br/>
-    <h2>Me shortly</h2>
+    <h2>Briefly</h2>
+<p style="font-size: 16pt;">
+I think that i am <a href="https://en.wikipedia.org/wiki/Multipotentiality"  target="_blank">multipotentialite</a> person. 
+    	<br/><br/>
+    	I prefer to use <a href="https://en.wikipedia.org/wiki/Nonviolent_Communication"  target="_blank">NVC</a> and <a href="https://en.wikipedia.org/wiki/Non-monogamy"  target="_blank">non-monogamy</a> style of relationships.
+    	<br/><br/>
+    	I am <a href="https://en.wikipedia.org/wiki/Vegan"  target="_blank">vegan</a>. 
 
-Kyiv's native, Berlin's weird, California's creative.
-
+</p>    	
+<em>Born and live in Kiev, <a href="https://en.wikipedia.org/wiki/Ukraine"  target="_blank">Ukraine</a>.</em>
+<br/>
     <h2>Me not so shortly</h2>
-
-    Graduated KPI and MAUP.
-
+    <p style="line-height: 18pt; font-size: 14pt;">
+I like to explore what is happend in the edges between. I have Master (not exactly, here it called Specialist) Degree in <b>Math</b> and Master (yeap, that one real) Degree in <b>Psychology</b>.
+<br/><br/>
+But thru the life my real passion is <b>Contemporary art</b> and i doing self-education and learn-by-doing in it constantly. I have done a lot of <a href="../artworks/">artworks</a> and <a href="../projectst/">projects</a> trying to combine data visualisation, cognitive and positive psychology, spiritual practices, contemporary art.
+<br/><br/>
+Also i've some urban exploration of Kiev. I love to find by walking or kickscootoring intersections between nature and town.
+</p>
+    <h2>Photo</h2>
+<center><img src="dan_portret.jpg"/></center>    
 </div>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
