--- a/about/index.html
+++ b/about/index.html
@@ -27,7 +27,7 @@ I think that i am <a href="https://en.wikipedia.org/wiki/Multipotentiality"  tar
     <p style="line-height: 18pt; font-size: 14pt;">
 I like to explore what is happend in the edges between. I have Master (not exactly, here it called Specialist) Degree in <b>Math</b> and Master (yeap, that one real) Degree in <b>Psychology</b>.
 <br/><br/>
-But thru the life my real passion is <b>Contemporary art</b> and i doing self-education and learn-by-doing in it constantly. I have done a lot of <a href="../artworks/">artworks</a> and <a href="../projectst/">projects</a> trying to combine data visualisation, cognitive and positive psychology, spiritual practices, contemporary art.
+But thru the life my real passion is <b>Contemporary art</b> and i doing self-education and learn-by-doing in it constantly. I have done a lot of <a href="../artworks/">artworks</a> and <a href="../projects/">projects</a> trying to combine data visualisation, cognitive and positive psychology, spiritual practices, contemporary art.
 <br/><br/>
 Also i've some urban exploration of Kiev. I love to find by walking or kickscootoring intersections between nature and town.
 </p>
