--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@
 	</style>
  <body style="padding: 0; margin: 30px;">
 <div style="margin: auto; min-height: 520px; width: 600px;  background-color: white; border: 10px solid #e5950c; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
-  <a href="../" style="color: #DD4723">< back</a><br/>
+  <a href="../" style="color: #DD4723">< back</a><br/><br/>
     <h2>Briefly</h2>
 <p style="font-size: 16pt;">
 I think that i am <a href="https://en.wikipedia.org/wiki/Multipotentiality"  target="_blank">multipotentialite</a> person. 
@@ -32,7 +32,8 @@ But thru the life my real passion is <b>Contemporary art</b> and i doing self-ed
 Also i've some urban exploration of Kiev. I love to find by walking or kickscootoring intersections between nature and town.
 </p>
     <h2>Photo</h2>
-<center><img src="dan_portret.jpg"/></center>    
+<center><img src="dan_portret.jpg"/></center>  
+<br/><br/>  <a href="../" style="color: #DD4723">< back</a><br/>  
 </div>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
