--- a/projects/index.html
+++ b/projects/index.html
@@ -42,7 +42,7 @@
    <em><span style="color: gray">2003–07</span> — <a href="http://www.bioritmi.narod.ru" target="black">Biorhythms calculator (freeware program for Windows)</a><br/>
 
    <span style="color: gray">2004</span> — <a href="http://ua-access.narod.ru" target="black">Study course about Ms Access (ukrainian language)</a><br/><br/></em>
-
+<br/>   <a href="../" style="color: #DD4723">< back</a><br/>
 
 </div>
 <script>
