--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
 	<p style="font-size: 14pt">
 	<a href="mailto:dan@dan.kiev.ua">mail</a>	
 	> <a target="_blank" href="https://medium.com/@dan.voronov">medium</a>
-	> <a target="_blank" href="https://www.instagram.com/harmony.consent/">instagram</a>
+	> <a target="_blank" href="https://www.goodreads.com/dankievua">goodreads</a>	
+	> <a target="_blank" href="https://www.instagram.com/dan.kiev.ua/">instagram</a>
 	> <a target="_blank" href="https://www.youtube.com/user/DanVoronov/videos">youtube</a>
-	> <a target="_blank" href="https://t.me/dankievua">telegram public</a>
+	> <a target="_blank" href="https://t.me/dankievua">telegram</a>
 	<br/></p>
 	&#8964; <a href="http://dan.kiev.ua/dan-files/cv/cv_danvoronov_2018.pdf">C.V. (pdf)</a>
 	<br/>
