--- a/now/index.html
+++ b/now/index.html
@@ -10,14 +10,15 @@
 	   a {color: black};
 	</style>
  <body style="padding: 0; margin: 0;">
-<div style="position: absolute; margin: auto; height: 250px; width: 600px;  background-color: white; border: 10px solid #e5950c; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
+<div style="position: absolute; margin: auto; height: 250px; width: 600px;  background-color: white; border: 10px solid #e5950c; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px; line-height: 16pt">
   <a href="../" style="color: #DD4723">< back</a><br/>
-<h2>What I’m doing now</h2><br/>
-<b>2018-19</b> – telegram public about the book "Коротко і по суті", </br>
-<b>2019</b> – restructuring and English translating of this site, </br>
-<b>2019</b> – deep research of the polyamory | <a target="_blank" href="https://polyamory.in.ua">polyamory.in.ua</a>, </br>
-<b>2019</b> – want to start learning mobile game development, </br>
-<b>2019 april</b> – we will start new season of #КИЕВнасквозь hikes.<br/><br/><br/>
+<h2>What I’m doing now</h2>
+<a href="https://t.me/essentialismbook" target="_blank">telegram public</a>: ideas from the book "Коротко і по суті / Essentialism" by Greg McKeown</br>
+<b>spring to autumn</b> – new season of Kyiv urban hikes. <a href="https://t.me/kievpohod" target="_blank">telegram public</a><br/><br/>
+<b>2019</b> – this site upgrade (restructuring and English translating)</br>
+<b>2019</b> – deep research of the sex and polyamory topics, web <a target="_blank" href="https://polyamory.in.ua">polyamory.in.ua</a></br>
+<b>2019</b> – want to learn mobile game development and Python data analytics tools</br>
+<br/>
 <em>(This is <a href="https://nownownow.com/about">a now page</a>, and if you have your own site, <a href="https://nownownow.com/about">you should make one</a>, too.)</em>
 </div>
 <script>
