--- a/artworks/index.html
+++ b/artworks/index.html
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
-<html class="nojs html" lang="ru-RU" style="background-color: #1caf69;">
- <head>
-  <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
+<html class="nojs html" style=" background-color: #1caf69;" lang="ru-RU">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>ARTWORKS | Dan Voronov</title>
-     <meta name="description" content="Личный сайт. Дан Воронов. Киев">
-   <meta name="author" content="Dan Voronov"> 
-   </head>
-   <style>
-     a {color: black};
+    <meta name="description" content="Личный сайт. Дан Воронов. Киев">
+    <meta name="author" content="Dan Voronov">
+    <style type="text/css">
+	 		a {color: black;
+	 	 text-decoration: none;
+	 	 border-bottom: solid 1px orange;
+	 		};
      img { max-width: 400px; }
   </style>
- <body style="padding: 0; margin: 30px;">
-<div style="margin: auto; width: 600px;  background-color: white; border: 10px solid #e5950c; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
-  <a href="../" style="color: #DD4723">< back</a><br/><br/>
-  <h2>ARTWORKS</h2>
-  <p style="line-height: 18pt; font-size: 14pt;">
-
-<EM>As a teenager I played guitar and drums, wrote poems and stories. I photographed on the "Зенит" camera. Then it became the basis for <a href="early/">early artworks</a>.</EM><br/><br/>
-
-From the age of 27 I have been using my dramaturgic skill and desire to explore the world in the <a href="film/">film</a> and <a href="theater/">theater</a> projects. And my infinite love to sound in the <a href="music/">electro-musical</a> projects.<br/><br/>
-
-At the age of 32 I met the <a href="butoh/">Butoh dance</a> and became a member of the "ZA" dancing group. I also do solo <a href="performance/">urban performances</a>.<br/><br/>
-
-<span style="font-size: 16pt;">Now I use my various skills to create <a href="hybridart/">hybrid and interdisciplinary art</a> projects.</span><br/>
-  </p>
- <br/> <a href="../" style="color: #DD4723">< back</a><br/>
-</div>
-<script>
+  </head>
+  <body style=" padding: 0; margin: 30px;">
+    <div style="margin: auto; width: 600px;  background-color: white; border: 10px solid #e5950c; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
+      <a href="../" style="color: #DD4723; border-bottom: solid 1px #DD4723;">&lt; back</a><br>
+      <br>
+      <h2>ARTWORKS</h2>
+      <p style="line-height: 18pt; font-size: 14pt;"> <em>As a teenager I
+          played guitar and drums, wrote poems and stories. I photographed on
+          the "Зенит" camera. Then it became the basis for <a href="early/">early
+            artworks</a>.</em><br>
+        <br>
+        From the age of 27 I have been using my dramaturgic skill and desire to
+        explore the world in the <a href="film/">film</a> and <a href="theater/">theater</a>
+        projects. And my infinite love to sound in the <a href="music/">electro-musical</a>
+        projects.<br>
+        <br>
+        At the age of 32 I met the <a href="butoh/">Butoh dance</a> and became
+        a member of the "ZA" dancing group. I also do solo <a href="performance/">urban
+          performances</a>.<br>
+        <br>
+        <span style="font-size: 16pt;">Now I use my various skills to create <a
+            href="hybridart/">hybrid
+            and interdisciplinary art</a> projects.</span><br>
+      </p>
+      <br>
+      <a href="../" style="color: #DD4723; border-bottom: solid 1px #DD4723;">&lt; back</a><br>
+    </div>
+    <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -36,5 +49,5 @@ At the age of 32 I met the <a href="butoh/">Butoh dance</a> and became a member 
   ga('send', 'pageview');
 
 </script>
-</body></html>
-
+  </body>
+</html>
