--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-<!DOCTYPE html><html>  <head>    <meta http-equiv="content-type" content="text/html; charset=UTF-8">    <title>Dan Voronov | Дан Воронов</title>    <meta name="description" content="Личный сайт. Дан Воронов. Киев">    <meta name="author" content="Dan Voronov">    <style type="text/css">	 	a {color: black;	 	 text-decoration: none;	 	 border-bottom: solid 1px orange;	 		};	 	@-webkit-keyframes Green {	    0%{background-position:0% 50%}	    50%{background-position:100% 50%}	    100%{background-position:0% 50%}	}	@-moz-keyframes Green {	    0%{background-position:0% 50%}	    50%{background-position:100% 50%}	    100%{background-position:0% 50%}	}	@keyframes Green { 	    0%{background-position:0% 50%}	    50%{background-position:100% 50%}	    100%{background-position:0% 50%}	}	</style>  </head>  <body style="  background: linear-gradient(224deg, #22c76e, #53a9b1); background-size: 400% 400%; -webkit-animation: Green 30s ease infinite; -moz-animation: Green 30s ease infinite; animation: Green 30s ease infinite;">    <div style="position: absolute; margin: auto; height: 250px; width: 600px;  background-color: white; border: 10px solid #22c76e; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">      <h1 style="padding: 0; margin: 0; color: #DD4723">Dan Voronov / Дан        Вóронов</h1>      <br>      <i>For the past 10 years, I’ve been working on designing experiences and        journeys that touch people's inner Self.</i><br>      <br>      <h2 style="padding: 0; margin: 0; color: gray"><a href="about/">ME</a>        &nbsp;<a href="artworks/">ARTWORKS</a> &amp; <a href="projects/">PROJECTS</a>        &nbsp;<a href="now/">NOW</a> &nbsp;<a href="blog/">ARTICLES</a> </h2>      <p style="font-size: 14pt">You can <a href="mailto:dan.voronov@pm.me">          mail</a> me with any question.</p>      <p style="font-size: 14pt">&gt; <a target="_blank" href="https://www.goodreads.com/dankievua">goodreads</a>        &gt; <a target="_blank" href="https://www.instagram.com/dan.kiev.ua/">instagram</a>        &gt; <a target="_blank" href="https://www.youtube.com/user/DanVoronov/videos">youtube</a>        &gt; <a target="_blank" href="https://t.me/dankievua">telegram</a> </p>      <span style="font-size: 80%"></span><br>    </div>    <script>  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');  ga('create', 'UA-5293921-1', 'auto');  ga('send', 'pageview');</script> </body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>Дан Воронов | Dan Voronov</title>
+    <meta name="description" content="Personal site of Dan Voronov, creator and artist.">
+    <meta name="author" content="Dan Voronov">
+    <style type="text/css">
+	 	a {color: black;
+	 	 text-decoration: none;
+	 	 border-bottom: solid 1px orange;
+	 		};
+	 	@-webkit-keyframes Green {
+	    0%{background-position:0% 50%}
+	    50%{background-position:100% 50%}
+	    100%{background-position:0% 50%}
+	}
+	@-moz-keyframes Green {
+	    0%{background-position:0% 50%}
+	    50%{background-position:100% 50%}
+	    100%{background-position:0% 50%}
+	}
+	@keyframes Green { 
+	    0%{background-position:0% 50%}
+	    50%{background-position:100% 50%}
+	    100%{background-position:0% 50%}
+	}
+	</style>
+  </head>
+  <body style="     background: linear-gradient(224deg, #22c76e, #53a9b1); background-size: 400% 400%; -webkit-animation: Green 30s ease infinite; -moz-animation: Green 30s ease infinite; animation: Green 30s ease infinite;">
+    <div style="position: absolute; margin: auto; height: 250px; width: 600px;  background-color: white; border: 10px solid #22c76e; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
+      <h1 style="padding: 0; margin: 0; color: #DD4723">Dan Voronov / Дан
+        Вóронов</h1>
+      <br>
+      <i>For the past 10 years, I’ve been working on designing experiences and
+        journeys that touch people's inner Self.</i><br>
+      <br>
+      <h2 style="padding: 0; margin: 0; color: gray"><a href="now/">NOW</a> 
+        &nbsp;<a href="artworks/">ARTWORKS</a> &amp; <a href="projects/">PROJECTS</a>
+        &nbsp;<a href="blog/">ARTICLES</a> &nbsp;<a href="about/">ME</a> </h2>
+      <p style="font-size: 14pt; padding-top: 10px">Feel free to <a href="mailto:dan.voronov@pm.me">mail</a>
+        me and follow in:</p>
+      <p style="font-size: 14pt">&gt; <a target="_blank" href="https://www.goodreads.com/dankievua">goodreads</a>
+        &gt; <a target="_blank" href="https://www.instagram.com/dan.kiev.ua/">instagram</a>
+        &gt; <a target="_blank" href="https://www.youtube.com/user/DanVoronov/videos">youtube</a>
+        &gt; <a target="_blank" href="https://t.me/dankievua">telegram</a> </p>
+      <span style="font-size: 80%"></span><br>
+    </div>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-5293921-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+  </body>
+</html>
