--- a/artworks/index.html
+++ b/artworks/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="nojs html" style=" background-color: #1caf69;" lang="ru-RU">
+<html class="nojs html" style="    background-color: #1caf69;" lang="ru-RU">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>ARTWORKS | Dan Voronov</title>
@@ -10,12 +10,13 @@
 	 	 text-decoration: none;
 	 	 border-bottom: solid 1px orange;
 	 		};
-     img { max-width: 400px; }
+     
   </style>
   </head>
-  <body style=" padding: 0; margin: 30px;">
+  <body style="    padding: 0; margin: 30px;">
     <div style="margin: auto; width: 600px;  background-color: white; border: 10px solid #e5950c; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
-      <a href="../" style="color: #DD4723; border-bottom: solid 1px #DD4723;">&lt; back</a><br>
+      <a href="../" style="color: #DD4723; border-bottom: solid 1px #DD4723;">&lt;
+        back</a><br>
       <br>
       <h2>ARTWORKS</h2>
       <p style="line-height: 18pt; font-size: 14pt;"> <em>As a teenager I
@@ -34,10 +35,26 @@
         <br>
         <span style="font-size: 16pt;">Now I use my various skills to create <a
             href="hybridart/">hybrid
-            and interdisciplinary art</a> projects.</span><br>
-      </p>
-      <br>
-      <a href="../" style="color: #DD4723; border-bottom: solid 1px #DD4723;">&lt; back</a><br>
+            and interdisciplinary art</a> projects.</span></p>
+      <p style="line-height: 18pt; font-size: 14pt;"><span style="font-size: 16pt;"><br>
+        </span></p>
+      <p style="line-height: 18pt; font-size: 14pt;"><span style="font-size: 16pt;"><br>
+        </span></p>
+      <div style="text-align: center;"><a style="border-bottom: 0px" href="dan_rooftop_f.jpg" target="_blank"><img
+            src="dan_rooftop.jpg"
+            alt="Dan Voronov on roof"
+            title="Dan Voronov on roof"
+            style="height: 600px;"></a><br>
+      </div>
+      <div style="text-align: center;"><br>
+      </div>
+      <div style="text-align: center;"><br>
+      </div>
+      <div style="text-align: center;"><br>
+        <br>
+      </div>
+      <a href="../" style="color: #DD4723; border-bottom: solid 1px #DD4723;">&lt;
+        back</a><br>
     </div>
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
