--- a/index.html
+++ b/index.html
@@ -1,1 +1,87 @@
-<!DOCTYPE html><html>  <head>    <meta http-equiv="content-type" content="text/html; charset=UTF-8">    <title>Дан Воронов | Dan Voronov</title>    <meta name="description" content="Personal site of Dan Voronov, creator and artist.">    <meta name="author" content="Dan Voronov">    <style type="text/css">	 	a {color: black;	 	 text-decoration: none;	 	 border-bottom: solid 1px orange;	 		};	 	@-webkit-keyframes Green {	    0%{background-position:0% 50%}	    50%{background-position:100% 50%}	    100%{background-position:0% 50%}	}	@-moz-keyframes Green {	    0%{background-position:0% 50%}	    50%{background-position:100% 50%}	    100%{background-position:0% 50%}	}	@keyframes Green { 	    0%{background-position:0% 50%}	    50%{background-position:100% 50%}	    100%{background-position:0% 50%}	}	</style>  </head>  <body style="               background: linear-gradient(224deg, #22c76e, #53a9b1); background-size: 400% 400%; -webkit-animation: Green 30s ease infinite; -moz-animation: Green 30s ease infinite; animation: Green 30s ease infinite;">    <div style="position: absolute; margin: auto; height: 250px; width: 600px;  background-color: white; border: 10px solid #22c76e; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">      <h1 style="padding: 0; margin: 0; color: #DD4723">Dan Voronov / Дан        Вóронов</h1>      <br>      <i>For the past 10 years, I’ve been working on designing experiences and        journeys that touch people's inner Self.</i><br>      <br>      <h2 style="padding: 0; margin: 0; color: gray"><a href="now/">NOW</a>        &nbsp;<a href="artworks/">ARTWORKS</a> &amp; <a href="projects/">PROJECTS</a>        &nbsp;<a href="blog/">ARTICLES</a> &nbsp;<a href="about/">ME</a> </h2>      <div style="padding-top: 5px">        <hr style="border:0; border-top: 2px dotted lightgray"></div>      <p style="font-size: 14pt; padding-top: 3px">Feel free to <a href="mailto:dan.voronov@pm.me">mail</a>        me and follow in:</p>      <p style="font-size: 14pt">&gt; <a target="_blank" href="https://www.goodreads.com/dankievua">goodreads</a>        &gt; <a target="_blank" href="https://www.instagram.com/dan.kiev.ua/">instagram</a>        &gt; <a target="_blank" href="https://www.youtube.com/user/DanVoronov/videos">youtube</a>        &gt; <a target="_blank" href="https://t.me/dankievua">telegram</a> </p>      <span style="font-size: 80%"></span><br>    </div>    <script>  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');  ga('create', 'UA-5293921-1', 'auto');  ga('send', 'pageview');</script> </body></html>
+<!DOCTYPE html>
+<html lang="ru-RU">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>Дан Воронов | Dan Voronov</title>
+    <meta name="description" content="Personal site of Dan Voronov, artist.">
+    <meta name="author" content="Dan Voronov">
+    <style type="text/css">
+        @-webkit-keyframes Green {
+          0%{background-position:0% 50%}
+          50%{background-position:100% 50%}
+          100%{background-position:0% 50%}
+      }
+      @-moz-keyframes Green {
+          0%{background-position:0% 50%}
+          50%{background-position:100% 50%}
+          100%{background-position:0% 50%}
+      }
+      @keyframes Green { 
+          0%{background-position:0% 50%}
+          50%{background-position:100% 50%}
+          100%{background-position:0% 50%}
+      }
+  </style>
+  </head>
+  <body style="   background: linear-gradient(224deg, #22c76e, #53a9b1); background-size: 400% 400%; -webkit-animation: Green 30s ease infinite; -moz-animation: Green 30s ease infinite; animation: Green 30s ease infinite;">
+    <div style="margin: auto; width: 600px;  background-color: white; border: 10px solid #e5950c; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
+      <h1 style="padding: 0; margin: 0; color: #DD4723">Dan Voronov / Дан
+        Вóронов</h1>
+      <br>
+      <i>For the past 10 years, I’ve been working on designing experiences and
+        journeys that touch people's inner Self.</i><br>
+      <br>
+      <h2>ARTWORKS</h2>
+      <span style="font-size: 16pt;">Now I use my various skills to create <a href="hybridart/">hybrid
+          and interdisciplinary art</a> projects.</span>
+      <p style="line-height: 18pt; font-size: 14pt;">At the age of 32 I met the
+        <a href="butoh/">Butoh dance</a> and became a member of the "ZA" dancing
+        group. I also do solo <a href="performance/">urban performances</a>.</p>
+      <p style="line-height: 18pt; font-size: 14pt;">From the age of 27 I have
+        been using my dramaturgic skill and desire to explore the world in the <a
+          href="film/">film</a>
+        and <a href="theater/">theater</a> projects. And my infinite love to
+        sound in the <a href="music/">electro-musical</a> projects.</p>
+      <p style="line-height: 18pt; font-size: 14pt;"><br>
+      </p>
+      <p style="line-height: 18pt; font-size: 14pt;"> <em>As a teenager I
+          played guitar and drums, wrote poems and stories. I photographed on
+          the "Zenit" camera. Then it became the basis for <a href="early/">early
+            artworks</a>.</em><br>
+      </p>
+      <div style="text-align: center;"><a style="border-bottom: 0px" href="dan_rooftop_f.jpg"
+          target="_blank"><img
+            src="dan_rooftop.jpg"
+            alt="Dan Voronov on roof"
+            title="Dan Voronov on roof"
+            style="height: 600px;"></a><br>
+      </div>
+      <div style="text-align: center;"><br>
+      </div>
+      <div style="text-align: center;"><br>
+      </div>
+      <h2 style="padding: 0; margin: 0; color: gray"><a href="now/">NOW</a>
+        &nbsp;&nbsp;&nbsp;<a href="projects/">PROJECTS</a> &nbsp;&nbsp;&nbsp;<a href="blog/">ARTICLES</a>
+        &nbsp;&nbsp;&nbsp;<a href="about/">ABOUT ME</a> </h2>
+      <div style="padding-top: 25px">
+        <hr style="border:0; border-top: 2px dotted lightgray"></div>
+      <p style="font-size: 14pt; padding-top: 3px">Feel free to <a href="mailto:dan.voronov@pm.me">mail</a>
+        me and follow in:</p>
+      <p style="font-size: 14pt">&gt; <a target="_blank" href="https://www.goodreads.com/dankievua">goodreads</a>
+        &gt; <a target="_blank" href="https://www.instagram.com/dan.kiev.ua/">instagram</a>
+        &gt; <a target="_blank" href="https://www.youtube.com/user/DanVoronov/videos">youtube</a>
+        &gt; <a target="_blank" href="https://t.me/dankievua">telegram</a> </p>
+      <span style="font-size: 80%"></span> <br>
+    </div>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-5293921-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+  </body>
+</html>
