--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </style>
   </head>
   <body style="   background: linear-gradient(224deg, #22c76e, #53a9b1); background-size: 400% 400%; -webkit-animation: Green 30s ease infinite; -moz-animation: Green 30s ease infinite; animation: Green 30s ease infinite;">
-    <div style="margin: auto; width: 600px;  background-color: white; border: 10px solid #e5950c; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
+    <div style="margin: auto; width: 600px;  background-color: white; border: 10px solid #22c76e; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
       <h1 style="padding: 0; margin: 0; color: #DD4723">Dan Voronov / Дан
         Вóронов</h1>
       <br>
