--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <div style="text-align: center;"><a style="border-bottom: 0px" href="dan_rooftop_f.jpg"
           target="_blank"><img
             src="dan_rooftop.jpg"
-            alt="Dan Voronov showing his dick to PAC"
-            title="Dan Voronov on roof"
+            alt="Dan Voronov is showing his dick to PAC"
+            title="Dan Voronov is showing his dick to PAC"
             style="height: 600px;"></a><br>
       </div>
       <div style="text-align: center;"><br>
@@ -61,7 +61,7 @@
       <div style="text-align: center;"><br>
       </div>
       <h2 style="padding: 0; margin: 0; color: gray"><a href="now/">NOW</a>
-        &nbsp;&nbsp;&nbsp;<a href="projects/">NON-ART PROJECTS</a> &nbsp;&nbsp;&nbsp;<a href="blog/">ARTICLES</a>
+        &nbsp;&nbsp;&nbsp;<a href="projects/">BESIDE ART</a> &nbsp;&nbsp;&nbsp;<a href="blog/">ARTICLES</a>
         &nbsp;&nbsp;&nbsp;<a href="about/">ABOUT ME</a> </h2>
       <div style="padding-top: 25px">
         <hr style="border:0; border-top: 2px dotted lightgray"></div>
