--- a/kyivnaskvoz/2019-08-09/index.html
+++ b/kyivnaskvoz/2019-08-09/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>#КИЕВнасквозь – Дан Воронов</title>
+  <title>#КИЕВнасквозь 2019 – Дан Воронов</title>
   <meta name="description" content="Идем пешком сквозь Киев.">
   <meta name="author" content="Dan Voronov">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>  
