--- a/kyivnaskvoz/2019-08-16/index.html
+++ b/kyivnaskvoz/2019-08-16/index.html
@@ -37,9 +37,9 @@ box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.3);
 <div class="overboxtxt">#КИЕВнасквозь</div>
 <div class="overbox sha"> 
 	
-<p>💬 С пятницы на субботу идем пешком под ночному Киеву с одного конца (Министерское озеро) к другому (Красный Хутор).</p>
+<p>💬 С пятницы на субботу идем пешком по ночному Киеву с одного конца (Министерское озеро) к другому (метро Красный Хутор).</p>
 
-<p>💬 Подробности, обсуждение, предложения и фотографии в чате.</p>
+<p>💬 Правила, подробности, обсуждение, предложения в чате.</p>
 
 	
 </div>
@@ -51,7 +51,7 @@ box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.3);
     <script>
 
       var map;
-      var date_start = new Date('August 09 2019 21:00:00 GMT+0300');
+      var date_start = new Date('August 16 2019 21:00:00 GMT+0300');
       var date_toshow  = new Date();
 
       function initMap() {
@@ -61,7 +61,7 @@ box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.3);
         });
 
  		kmlLayerMap = new google.maps.KmlLayer({
-	 		url: 'http://dan.kiev.ua/kyivnaskvoz/kml/kyivn2019.kmz', 
+	 		url: 'http://dan.kiev.ua/kyivnaskvoz/kml/noch19.kmz', 
 	 		preserveViewport: true,
 	 		map: map
 	 	});
@@ -77,7 +77,8 @@ box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.3);
 	          	if (km<19) minut = km*15;
 	          		else if (km<29) minut = km*16.5;
 	          			else minut = km*17;
-	          	if (km>10) minut = minut + 15;
+	          	if (km>7) minut = minut + 10;
+	          	if (km>13) minut = minut + 10;
 	          	if (km>20) minut = minut + 25;	          	
 	          	if (km>27) minut = minut + 15;	          	
 	          	date_toshow.setTime(date_start.getTime() + (minut*60*1000));   
