--- a/kyivnaskvoz/2019-08-16/index.html
+++ b/kyivnaskvoz/2019-08-16/index.html
@@ -50,7 +50,7 @@ box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.3);
    <div id="map"></div></div></div>
     <script>
 
-      var map;
+      var map, infoWindow;
       var date_start = new Date('August 16 2019 21:00:00 GMT+0300');
       var date_toshow  = new Date();
 
@@ -59,9 +59,38 @@ box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.3);
           zoom: 11,
           center: {lat: 50.47558, lng:  30.570} // lng это лево право
         });
+	  
+	  infoWindow = new google.maps.InfoWindow;
+      if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(function(position) {
+            var pos = {
+              lat: position.coords.latitude,
+              lng: position.coords.longitude
+            };
+
+            infoWindow.setPosition(pos);
+            infoWindow.setContent('Ваша позиция.');
+            infoWindow.open(map);
+            map.setCenter(pos);
+          }, function() {
+            handleLocationError(true, infoWindow, map.getCenter());
+          });
+        } else {
+          // Browser doesn't support Geolocation
+          handleLocationError(false, infoWindow, map.getCenter());
+        }
+      }
+
+      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+        infoWindow.setPosition(pos);
+        infoWindow.setContent(browserHasGeolocation ?
+                              'Error: The Geolocation service failed.' :
+                              'Error: Your browser doesn\'t support geolocation.');
+        infoWindow.open(map);
+      }
 
  		kmlLayerMap = new google.maps.KmlLayer({
-	 		url: 'http://dan.kiev.ua/kyivnaskvoz/kml/noch19.kmz', 
+	 		url: 'http://dan.kiev.ua/kyivnaskvoz/kml/nochnoi19.kmz', 
 	 		preserveViewport: true,
 	 		map: map
 	 	});
@@ -71,7 +100,7 @@ box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.3);
           if (parseFloat(kmlEvent.featureData.description) >= 0) {
           	var km = kmlEvent.featureData.description;
           
-          if (km == 0) {date_toshow.setTime(date_start.getTime() - (5*60*1000));    prefix = "Сбор до ";    }   
+          if (km == 0) {date_toshow.setTime(date_start.getTime() - (15*60*1000));    prefix = "Сбор до ";    }   
           	else if (km > 1) {
 	          	prefix = 'Прогноз в ';	          	
 	          	if (km<19) minut = km*15;
@@ -79,7 +108,7 @@ box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.3);
 	          			else minut = km*17;
 	          	if (km>7) minut = minut + 10;
 	          	if (km>13) minut = minut + 10;
-	          	if (km>20) minut = minut + 25;	          	
+	          	if (km>22.7) minut = minut + 30;	          	
 	          	if (km>27) minut = minut + 15;	          	
 	          	date_toshow.setTime(date_start.getTime() + (minut*60*1000));   
 	         }                   
