--- a/kyivnaskvoz/2019-08-16/index.html
+++ b/kyivnaskvoz/2019-08-16/index.html
@@ -50,7 +50,7 @@ box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.3);
    <div id="map"></div></div></div>
     <script>
 
-      var map, infoWindow;
+      var map;
       var date_start = new Date('August 16 2019 21:00:00 GMT+0300');
       var date_toshow  = new Date();
 
@@ -59,34 +59,6 @@ box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.3);
           zoom: 11,
           center: {lat: 50.47558, lng:  30.570} // lng это лево право
         });
-	  
-	  infoWindow = new google.maps.InfoWindow;
-      if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(function(position) {
-            var pos = {
-              lat: position.coords.latitude,
-              lng: position.coords.longitude
-            };
-
-            infoWindow.setPosition(pos);
-            infoWindow.setContent('Ваша позиция.');
-            infoWindow.open(map);
-            map.setCenter(pos);
-          }, function() {
-            handleLocationError(true, infoWindow, map.getCenter());
-          });
-        } else {
-          // Browser doesn't support Geolocation
-          handleLocationError(false, infoWindow, map.getCenter());
-        }
-
-      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-        infoWindow.setPosition(pos);
-        infoWindow.setContent(browserHasGeolocation ?
-                              'Error: The Geolocation service failed.' :
-                              'Error: Your browser doesn\'t support geolocation.');
-        infoWindow.open(map);
-      }
 
  		kmlLayerMap = new google.maps.KmlLayer({
 	 		url: 'http://dan.kiev.ua/kyivnaskvoz/kml/nochnoi19.kmz', 
