--- a/art/index.html
+++ b/art/index.html
@@ -25,29 +25,29 @@
   </head>
   <body style="   background: linear-gradient(224deg, #22c76e, #53a9b1); background-size: 400% 400%; -webkit-animation: Green 30s ease infinite; -moz-animation: Green 30s ease infinite; animation: Green 30s ease infinite;">
     <div style="margin: auto; width: 600px;  background-color: white; border: 10px solid #22c76e; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
-			<a href="../" style="color: #DD4723">&lt; home</a><span style="padding-left: 160px;">
-      <br>
-      <h2>ARTWORKS</h2>
-      <span style="font-size: 16pt;">Now I use my various skills to create <a href="art/hybridart/">hybrid
-          and interdisciplinary art</a> projects.</span>
-      <p style="line-height: 18pt; font-size: 14pt;">At the age of 32 I met the
-        <a href="art/butoh/">Butoh dance</a> and became a member of the "ZA"
-        dancing group. I also do solo <a href="art/performance/">urban
-          performances</a>.</p>
-      <p style="line-height: 18pt; font-size: 14pt;">From the age of 27 I have
-        been using my dramaturgic skill and desire to explore the world in the <a
-          href="art/film/">film</a>
-        and <a href="art/theater/">theater</a> projects. And my infinite love
-        to sound in the <a href="art/music/">electro-musical</a> projects.</p>
-      <p style="line-height: 18pt; font-size: 14pt;"><br>
-      </p>
-      <p style="line-height: 18pt; font-size: 14pt;"> <em>As a teenager I
-          played guitar and drums, wrote poems and stories. I photographed on
-          the "Zenit" camera. Then it became the basis for <a href="art/early/">early
-            artworks</a>.</em><br>
-      </p>
-
-    <script>
+      <a href="../" style="color: #DD4723">&lt; home</a><span style="padding-left: 160px;">
+        <br>
+        <h2>ARTWORKS</h2>
+        <span style="font-size: 16pt;">Now I use my various skills to create <a
+            href="hybrid">hybrid
+            and interdisciplinary art</a> projects.</span>
+        <p style="line-height: 18pt; font-size: 14pt;">At the age of 32 I met
+          the <a href="butoh/">Butoh dance</a> and became a member of the
+          "ZA" dancing group. I also do solo <a href="performance/">urban
+            performances</a>.</p>
+        <p style="line-height: 18pt; font-size: 14pt;">From the age of 27 I have
+          been using my dramaturgic skill and desire to explore the world in the
+          <a href="film/">film</a> and <a href="theater/">theater</a>
+          projects. And my infinite love to sound in the <a href="music/">electro-musical</a>
+          projects.</p>
+        <p style="line-height: 18pt; font-size: 14pt;"><br>
+        </p>
+        <p style="line-height: 18pt; font-size: 14pt;"> <em>As a teenager I
+            played guitar and drums, wrote poems and stories. I photographed on
+            the "Zenit" camera. Then it became the basis for <a href="early/">early
+              artworks</a>.</em><br>
+        </p>
+        <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -56,6 +56,6 @@
   ga('create', 'UA-5293921-1', 'auto');
   ga('send', 'pageview');
 
-</script>
+</script> </span></div>
   </body>
 </html>
