--- a/ru/index.html
+++ b/ru/index.html
@@ -125,11 +125,11 @@ var ajax_tptn_tracker = {"ajax_url":"http:\/\/dan.kiev.ua\/blog\/wp-admin\/admin
                                 <br />
                                 <div style="font-size: 16pt;">
                                   <form action="https://duckduckgo.com/" method="get">
-                                    <label for="q"><b>Search</b> dan.kiev.ua:</label>
+                                    <label for="q"><b>Искать на сайте</b> danvoronov.com:</label>
                                     <input style="font-size: 16pt;" name="q" value=""
                                       size="15"
                                       type="text" />
-                                    <input name="sites" value="dan.kiev.ua" type="hidden" />
+                                    <input name="sites" value="danvoronov.com" type="hidden" />
                                     <input name="ia" value="web" type="hidden" />
                                     <input style="font-size: 19pt;" value="⏎" type="submit" />
 				</form>
