--- a/ua/index.html
+++ b/ua/index.html
@@ -33,7 +33,7 @@
       <b>За освітою психолог, я пранцюю на межі внутріщного світу, новітніх
         технологій та сучасного мистецтва.</b><br>
       <br>
-      Про мое мистецтво є на <a href="http://danvoronov.com/ru/" target="_blank">англійскомовній
+      Про мое мистецтво є на <a href="http://danvoronov.com/" target="_blank">англійскомовній
         частині</a> сайту.<br>
       <br>
       Мої статі та роздуми є на <a href="http://danvoronov.com/ru/" target="_blank">російскомовній
@@ -53,9 +53,9 @@
       <p style="font-size: 14pt; padding-top: 3px">Мене можно зафоловити в
         наступних мережах:</p>
       <p style="font-size: 14pt">&gt; <a target="_blank" href="https://www.goodreads.com/dankievua">goodreads</a>
-        &gt; <a target="_blank" href="https://www.instagram.com/dan.kiev.ua/">instagram</a>
+        &gt; <a target="_blank" href="https://www.instagram.com/danyil.voronov/">instagram</a>
         &gt; <a target="_blank" href="https://www.youtube.com/user/DanVoronov/videos">youtube</a>
-        &gt; <a target="_blank" href="https://t.me/dankievua">telegram</a> </p>
+        &gt; <a target="_blank" href="https://t.me/dv_prj">telegram (ru)</a> </p>
       <span style="font-size: 80%"></span> <br>
     </div>
     <script>
