--- a/ua/index.html
+++ b/ua/index.html
@@ -28,12 +28,12 @@
       <h1 style="padding: 0; margin: 0; color: #DD4723">Дан Вóронов</h1>
       <br>
       Остані років 10 я займався тим, що дизайнерів такі досвіди та мандрівки,
-      які б зачипали в людях щось глибинне й важливе.<br>
+      які б зачепали в людях щось глибинне й важливе.<br>
       <br>
       <b>За освітою психолог, я пранцюю на межі внутріщного світу, новітніх
         технологій та сучасного мистецтва.</b><br>
       <br>
-      Про мое мистецтво є на <a href="http://danvoronov.com/" target="_blank">англійскомовній
+      Мій мистецькій архів є на <a href="http://danvoronov.com/" target="_blank">англійскомовній
         частині</a> сайту.<br>
       <br>
       Мої статі та роздуми є на <a href="http://danvoronov.com/ru/" target="_blank">російскомовній
