--- a/ua/index.html
+++ b/ua/index.html
@@ -33,10 +33,10 @@
       <b>За освітою психолог, я пранцюю на межі внутріщного світу, новітніх
         технологій та сучасного мистецтва.</b><br>
       <br>
-      Мій мистецькій архів є на <a href="http://danvoronov.com/" target="_blank">англійскомовній
+      Мій мистецькій архів є на <a href="http://danvoronov.com/">англійскомовній
         частині</a> сайту.<br>
       <br>
-      Мої статі та роздуми є на <a href="http://danvoronov.com/ru/" target="_blank">російскомовній
+      Мої статі та роздуми є на <a href="http://danvoronov.com/ru/">російскомовній
         частині</a> сайту.<br>
       <div style="padding-top: 25px">
         <hr style="border:0; border-top: 2px dotted lightgray"></div>
