--- a/prj/whereismygranny/index.html
+++ b/prj/whereismygranny/index.html
@@ -38,7 +38,7 @@ color: rgba(140, 18, 100, 1); }
 	
 <p>Мy grandmother Lena is dead for several years. I still thinking about her.</p>
 
-<p>On March 31, 2018, I, <a href="https://dan.kiev.ua/">Dan Voronov</a>, will go to the Lesnoe Cemetery with intention to find her grave.</p>
+<p>On March 31, 2018, I, <a href="http://danvoronov.com/">Dan Voronov</a>, will go to the Lesnoe Cemetery with intention to find her grave.</p>
 
 <p style="font-size: 75%">Because my parents don't telling me where she was buried. Because I loved her and for me, comparing with other relatives, grandma was a vivid expression of creativity and entrepreneurship. Because I want to say goodbye.</p>
 
@@ -67,7 +67,7 @@ color: rgba(140, 18, 100, 1); }
         });
 
  		new google.maps.KmlLayer({
-	 		url: 'http://dan.kiev.ua/whereismygranny/lesn31.kmz', 
+	 		url: 'http://danvoronov.com/prj/whereismygranny/lesn31.kmz', 
 	 		preserveViewport: true,
 	 		suppressInfoWindows: true,
 	 		map: map
