--- a/index.html
+++ b/index.html
@@ -49,11 +49,9 @@
           the "Zenit" camera. Then it became the basis for <a href="art/early/">early
             artworks</a>.</em><br>
       </p>
-      <div style="text-align: center;"><a style="border-bottom: 0px" href="dan-files/dan_rooftop_f.jpg"
+      <div style="text-align: center;"><a style="border-bottom: 0px" href="dan-files/i/under_the_brdge_f.jpg"
           target="_blank"><img
-            src="dan-files/dan_rooftop.jpg"
-            alt="Dan Voronov is showing his dick to PAC"
-            title="Dan Voronov is showing his dick to PAC"
+            src="dan-files/i/under_the_brdge.jpg"
             style="height: 600px;"></a><br>
       </div>
       <div style="text-align: center;"><br>
@@ -71,7 +69,7 @@
       <p style="font-size: 14pt">&gt; <a target="_blank" href="https://www.goodreads.com/dankievua">goodreads</a>
         &gt; <a target="_blank" href="https://www.instagram.com/danyil.voronov/">instagram</a>
         &gt; <a target="_blank" href="https://www.youtube.com/user/DanVoronov/videos">youtube</a>
-        &gt; <a target="_blank" href="https://t.me/dv_prj">telegram (ru)</a> </p>
+      </p>
       <span style="font-size: 80%"></span> <br>
     </div>
     <script>
