--- a/prj/soshenko33/index.html
+++ b/prj/soshenko33/index.html
@@ -155,7 +155,7 @@ $( document ).ready(function() {
 	    <div id="d12" class="door"><img src="img/d12.gif" /></div>        
 	</div>
 	 
-	   <div id="copy" style="clear: both; font-size: 8pt; text-align: center; padding-top: 35px;">(c) <a href="http://dan.kiev.ua/">Дан Воронов</a>, 2018 для <a href="http://soshenko33.tumblr.com/summer_school" target="_blank">Літня архітектурна школа</a>.</div> 
+	   <div id="copy" style="clear: both; font-size: 8pt; text-align: center; padding-top: 35px;">(c) <a href="http://danvoronov.com/">Дан Воронов</a>, 2018 для <a href="http://soshenko33.tumblr.com/summer_school" target="_blank">Літня архітектурна школа</a>.</div> 
 
 		
 </div> 	
