--- a/ua/index.html
+++ b/ua/index.html
@@ -30,7 +30,7 @@
       Остані років 10 я займався тим, що дизайнерів такі досвіди та мандрівки,
       які б зачепали в людях щось глибинне й важливе.<br>
       <br>
-      <b>За освітою психолог, я пранцюю на межі внутріщного світу, новітніх
+      <b>За освітою психолог, я працюю на межі внутріщного світу, новітніх
         технологій та сучасного мистецтва.</b><br>
       <br>
       Мій мистецькій архів є на <a href="http://danvoronov.com/">англійскомовній
@@ -55,7 +55,7 @@
       <p style="font-size: 14pt">&gt; <a target="_blank" href="https://www.goodreads.com/dankievua">goodreads</a>
         &gt; <a target="_blank" href="https://www.instagram.com/danyil.voronov/">instagram</a>
         &gt; <a target="_blank" href="https://www.youtube.com/user/DanVoronov/videos">youtube</a>
-        &gt; <a target="_blank" href="https://t.me/dv_prj">telegram (ru)</a> </p>
+        &gt; <a target="_blank" href="https://t.me/dv_prj">telegram</a> </p>
       <span style="font-size: 80%"></span> <br>
     </div>
     <script>
