--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
       var ono = idi.indexOf('dan.kiev.ua/blog');
 
       if ( ono>0 ) idi = idi.replace('dan.kiev.ua/blog', 'danvoronov.com/ru') 
-        else idi = idi.replace('dan.kiev.ua', 'danvoronov.com') 
-      console.log('ref: 'idi);
+        else idi = idi.replace('dan.kiev.ua', 'danvoronov.com');
+      
+      console.log('ref: '+idi);
       
 
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
