--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       
       var idi = document.referrer;
 
-      var idi2 = ( idi.indexOf('dan.kiev.ua/blog')>0 ) ?? idi.replace('dan.kiev.ua/blog', 'danvoronov.com/ru') : idi.replace('dan.kiev.ua', 'danvoronov.com');
+      var idi2 = ( idi.indexOf('dan.kiev.ua/blog')>0 ) ? idi.replace('dan.kiev.ua/blog', 'danvoronov.com/ru') : idi.replace('dan.kiev.ua', 'danvoronov.com');
       
 
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
