--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   ga('create', 'UA-5293921-1', 'auto');
   ga('send', 'pageview');
 
-  location.href = idi2;
+  if (idi.indexOf('dan.kiev.ua')>0) location.href = idi2;
 
 </script>
   </body>
