--- a/ru/index.html
+++ b/ru/index.html
@@ -116,7 +116,7 @@ var ajax_tptn_tracker = {"ajax_url":"http:\/\/dan.kiev.ua\/blog\/wp-admin\/admin
                                 <br />
                                 <h1>До 2019 я вел блог тут</h1>
                                 <div style="font-size: 14pt;">
-                                  <p>&gt;&gt; а теперь пишут на платформе <a
+                                  <p>&gt;&gt; а теперь на платформе <a
                                       target="_blank"
                                       href="https://medium.com/@dan.voronov">Medium</a>.</p>
                                 </div>
