--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ a:active {
       <br><br>
       <p style="line-height: 18pt; font-size: 12pt;">Also I know how to master the organization aspect: spliting the process into stages and keeping track of deadlines. For the art to take place, it is necessary to find the equipment, gather the audience through the social network and conduct a reasonable discussion-analysis afterwards. I did all that for many times.</p>
 
-<p style="line-height: 18pt; font-size: 14pt;">But when there is a <span class="yellow-highlight">manager, food and budget</span>, I can put more attention into the idea itself. Contact me and we’ll make the art.</p>
+<p style="line-height: 18pt; font-size: 14pt;">But when there are a <span class="yellow-highlight">manager, vegan food and budget</span>, I can put more attention into the idea itself. Contact me and we’ll make the art.</p>
 
 
     </div>
