--- a/index.html
+++ b/index.html
@@ -70,12 +70,11 @@ a:active {
 
 <p style="line-height: 18pt; font-size: 12pt;">I applied performance practices in the urban space, Butoh dance, mix of field recoding at Ableton software, verbatim in the doc theater, production of documentary and feature films to achieve this. I figured out post-drama theater, postmodernism and metamodernism. And I keep looking for new tools. <br> <span class="yellow-highlight">See artworks below...</span></p>
 
-     <br><br> <div style="text-align: center;"><a style="border-bottom: 0px" href="dan-files/i/under_the_brdge_f.jpg"
+     <br><br> <div style="text-align: center;"><a style="border-bottom: 0px" href="dan-files/i/dan_rooftop_f.jpg"
           target="_blank"><img
-            src="dan-files/i/under_the_brdge.jpg"
+            src="dan-files/i/dan_rooftop.jpg"
             style="height: 600px;"></a><br>
-      </div>       <i style="line-height: 12pt; font-size: 9pt;">For the past 10 years, I’ve been working on designing experiences and
-        journeys that touch people's inner Self.</i><br> <br><br>
+      </div><br> <br><br>
 
 <p style="line-height: 18pt; font-size: 14pt;"><b>You can cooperate with me when somebody unusual is required.</b> Like participation in weird contemporary performance, creating a track from strange sounds, documentary theater on the topic nobody wants to talk about, etc. <br> <span class="yellow-highlight">See contacts at the bottom...</span></p>
 
@@ -103,14 +102,13 @@ a:active {
       </p>
 
 
-      <br><br>
-                  <div style="text-align: center;"><a style="border-bottom: 0px" href="dan-files/i/dan_rooftop_f.jpg"
+      <br><br><div style="text-align: center;"><a style="border-bottom: 0px" href="dan-files/i/under_the_brdge_f.jpg"
           target="_blank"><img
-            src="dan-files/i/dan_rooftop.jpg"
+            src="dan-files/i/under_the_brdge.jpg"
             style="height: 600px;"></a><br>
-      </div>
-
-      <br><br>
+      </div>             <i style="line-height: 12pt; font-size: 9pt;">For the past 10 years, I’ve been working on designing experiences and
+        journeys that touch people's inner Self.</i>          
+      <br><br><br>
       <p style="line-height: 18pt; font-size: 12pt;">Also I know how to master the organization aspect: spliting the process into stages and keeping track of deadlines. For the art to take place, it is necessary to find the equipment, gather the audience through the social network and conduct a reasonable discussion-analysis afterwards. I did all that for many times.</p>
 
 <p style="line-height: 18pt; font-size: 14pt;">But when there are a <span class="yellow-highlight">manager, vegan food and budget</span>, I can put more attention into the idea itself. Contact me and we’ll make the art.</p>
