фотку сдвину пониже

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ a:active {
       </p>
 
 
-      <br><br><div style="text-align: center;"><a style="border-bottom: 0px" href="dan-files/i/under_the_brdge_f.jpg"
+      <br><br><br><br><div style="text-align: center;"><a style="border-bottom: 0px" href="dan-files/i/under_the_brdge_f.jpg"
           target="_blank"><img
             src="dan-files/i/under_the_brdge.jpg"
             style="height: 600px;"></a><br>
