--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ a:active {
       
       <h2 style="padding: 0; margin: 0; color: gray;"><a href="now/">NOW</a>
         &nbsp;&nbsp;&nbsp;<a href="speaker/">SPEAKER</a>
-        &nbsp;&nbsp;&nbsp;<a href="speaker/">STARTUPS</a>
+        &nbsp;&nbsp;&nbsp;<a href="startups/">STARTUPS</a>
         &nbsp;&nbsp;&nbsp;<a href="about/">ABOUT</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
           href="ru/">СТАТЬИ</a> </h2>
 <br><br>
