разделил раздел на два

--- a/speaker/index.html
+++ b/speaker/index.html
@@ -12,6 +12,9 @@
  <body style="padding: 0; margin: 30px;">
 <div style="margin: auto; min-height: 520px; width: 600px;  background-color: white; border: 10px solid #e5950c; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
   <a href="../" style="color: #DD4723">< home</a><br/>
+   <h2>My speaking</h2>
+      <div style="padding-top: 20px; font-size: 16pt; line-height: 24pt; ">
+ 
 
     <span style="color: gray">2016–18</span> — Lections about polyamory, non-monogamy in Kyiv, Kharkiv<br/><br/>
     <span style="color: gray">2016–17</span> — Trainings "Coping with jealousy" in Kyiv, Kharkiv<br/><br/>
@@ -22,12 +25,13 @@
     <span style="color: gray">2014–16</span> — "Contemporary art. Free course" <em>(w FreeSchool & <a href="http://dream-museum.com.ua/en/showEvent.php?id=284" target="blank">DreamMuseum</a>)</em><br/>
 
     <span style="color: gray">2014</span> —  "Dialogues about dramaturgy" support club for dramaturgs in Kyiv <br/>
-   <span style="color: gray">2012–13</span> — Short film laboratories at Gogolfest, Slava Frolova Art-picnic festivals<br/><br/>
+   <span style="color: gray">2012–13</span> — Short film laboratories at Gogolfest and Slava Frolova Art-picnic festivals<br/><br/>
 
    <span style="color: gray">2009–10</span> — "Active dreaming" practices in forest <em>— <a href="https://www.youtube.com/watch?v=6APEnOFLmVQ" target="blank">video</a></em><br/>
    <span style="color: gray">2008–10</span> — "Life Management Club" regular seft-development meetings (<a href="https://vk.com/lmclub" target="blank">vk</a>), <a href="http://life-management-club.podfm.ru/we/" target="blank">podcast</a><br/><br/>
 
-   <span style="color: gray">2004</span> — <a href="http://ua-access.narod.ru" target="black">Study course about Ms Access (ukrainian language)</a><br/><br/></em>
+   <span style="color: gray">2004</span> — <a href="http://ua-access.narod.ru" target="black">Study course about Ms Access (ukrainian language)</a><br/><br/>
+ </div>
 <br/>   <a href="../" style="color: #DD4723">< home</a><br/>
 
 </div>
