--- a/startups/index.html
+++ b/startups/index.html
@@ -12,16 +12,22 @@
  <body style="padding: 0; margin: 30px;">
 <div style="margin: auto; min-height: 520px; width: 600px;  background-color: white; border: 10px solid #e5950c; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
   <a href="../" style="color: #DD4723">< home</a><br/>
+        <h2>My startups</h2>
+      <div style="padding-top: 20px; font-size: 16pt; line-height: 24pt; ">
+ 
 
-    <span style="color: gray">2017–18</span> — Open educational project "Sex Education Week / SexEdUa" in Kyiv</a> <br/>
-    <span style="color: gray">2017</span> — <b>Self-tranformational online facebook group "87"</b> <br/>
+    <span style="color: gray">2019–21</span> — telegram bot about Babi Yar (Kyiv) events during WW2  <br/><br/>
+    <span style="color: gray">2017–19</span> — new <strong>Kyiv urban hikes</strong>: Throught the City <br/><br/>
+    <span style="color: gray">2017–18</span> — Open educational project "Sex Education Week", Kyiv</a> <br/>
+    <span style="color: gray">2017</span> — Self-tranformational diary online facebook group "87" <br/>
 
-    <span style="color: gray">2016–17</span> — <a href="http://apps.danvoronov.com/kievfalafel/">Mapping of falafel points in Kyiv</a> <br/><br/>
+    <span style="color: gray">2016–17</span> — <a href="http://apps.danvoronov.com/kievfalafel/">Mapping of Kyiv's falafel points</a> <br/><br/>
 
-   <span style="color: gray">2010–11</span> — Saturday's <a href="http://danvoronov.com/ru/kievpohod/">Kyiv urban hikes</a><br/><br/>
+   <span style="color: gray">2010–11</span> — Saturday's <a href="http://danvoronov.com/ru/kievpohod/">Kyiv urban hikes</a><br/>
+   <span style="color: gray">2010</span> — Svoyo Delo: online system for career guidance<br/><br/>
 
-   <em><span style="color: gray">2003–07</span> — <a href="http://www.bioritmi.narod.ru" target="black">Biorhythms calculator (freeware program for Windows)</a><br/>
-
+   <span style="color: gray">2003–07</span> — <a href="http://www.bioritmi.narod.ru" target="black">Biorhythms calculator</a> (freeware program for Windows)<br/>
+</div>
 <br/>   <a href="../" style="color: #DD4723">< home</a><br/>
 
 </div>
