поправил https://danvoronov.medium.com/

--- a/ru/index.html
+++ b/ru/index.html
@@ -118,7 +118,7 @@ var ajax_tptn_tracker = {"ajax_url":"http:\/\/dan.kiev.ua\/blog\/wp-admin\/admin
                                 <div style="font-size: 14pt;">
                                   <p>&gt;&gt; а теперь на платформе <a
                                       target="_blank"
-                                      href="https://medium.com/@dan.voronov">Medium</a>.</p>
+                                      href="https://danvoronov.medium.com/">Medium</a>.</p>
                                 </div>
                                 <br />
                                 <br />
